# disable-steam-cloud-and-auto-update

./: .gitignore  CMakeLists.txt  README.md  api.cpp  api.hpp  autoupdate_disable.cpp  autoupdate_disable.hpp  build.zig  cloud_disable.cpp  conanfile.txt  header.hpp  libraryfolders.vdf  main.cpp  refactor.cpp  refactor2.cpp  sharedconfig.vdf  utility.cpp  utility.hpp  vcpkg.json  xmake.lua
include/disable-steam-cloud-and-auto-update/: api.hpp  autoupdate_disable.hpp  cloud_disable.hpp  utility.hpp
include/steam-cloud-and-autoupdate-disable/: api.hpp  cloud_disable.hpp
src/: api.cpp  autoupdate_disable.cpp  cloud_disable.cpp  main.cpp  utility.cpp
